syntax = "proto3";

package tgvalidatord;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_package = "com.taurushq.sdk.protect.proto.v1";

message InternalUser {

  message Group {
    uint64 id = 1;
    string externalGroupId = 2;
    bool enforcedInRules = 3;
  }

  message VisibilityGroup {
    string id = 1;
    string name = 2;
    string description = 3;
  }

  message KeyContainer {
    string value = 1;
    bool canBeStored = 2;
  }

  message Attribute {
    string key = 1;
    string value = 2;
    uint64 id = 3;
    string contentType = 4;
    string owner = 5;
    string type = 6;
    string subType = 7;
    bool isFile = 8;
    google.protobuf.Timestamp creationDate = 9;
    google.protobuf.Timestamp updateDate = 10;
  }

  message ApiKey {
    enum VerificationType {
      NONE = 0;
      HMAC = 1;
      ECDSA = 2;
    }
    string id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp revealDate = 3;
    google.protobuf.Timestamp lastUsed = 4;
    bool revealable = 5;
    VerificationType verificationType = 6;
  }


  uint64 id = 1;
  uint64 tenantId = 2;
  string externalUserId = 3;
  string firstName = 4;
  string lastName = 5;
  string status = 6 ;
  string email = 7 ;
  repeated string roles = 8;
  bool passwordChanged = 9;
  string publicKey = 10;
  repeated Group groups = 11;
  bool enforcedInRules = 12;
  google.protobuf.Timestamp creationDate = 13;
  google.protobuf.Timestamp updateDate = 14;
  bool totpEnabled = 15;
  KeyContainer keyContainer = 16;
  string username = 17 ;
  google.protobuf.Timestamp lastLogin = 18;
  repeated Attribute attributes = 19;
  repeated ApiKey apiKeys = 20;
  repeated VisibilityGroup visibilityGroups = 21;
  google.protobuf.BoolValue publicKeyEnforcedInRules = 22;
}


message InternalGroup {

  message User {
    uint64 id = 1;
    string externalUserId = 2;
    bool enforcedInRules = 3;
  }

  uint64 id = 1;
  uint64 tenantId = 2;
  string externalGroupId = 3;
  string name = 4;
  string email = 5;
  repeated User users = 6;
  google.protobuf.Timestamp creationDate = 7;
  google.protobuf.Timestamp updateDate = 8;
  string description = 9;
  bool enforcedInRules = 10;
}

message InternalVisibilityGroup {

  message User {
    uint64 id = 1;
    string externalUserId = 2;
  }

  string id = 1;
  uint64 tenantId = 2;
  string name = 3;
  string description = 4;
  repeated User users = 5;
  google.protobuf.Timestamp creationDate = 6;
  google.protobuf.Timestamp updateDate = 7;
  uint64 userCount = 8;
}
